--- a/zad1/index.html
+++ b/zad1/index.html
@@ -49,6 +49,8 @@
     <p>When I left I realized That you were wonderful You were the one who’s made my life more colourful</p>
 
     <p>I was wrong I admit I’m just a mindless fool And things are getting cruel</p>
+    
+    <h2> HELLO WORD <h2>
 
 </body>
 
