--- a/zad1/index.html
+++ b/zad1/index.html
@@ -51,6 +51,8 @@
     <p>I was wrong I admit I’m just a mindless fool And things are getting cruel</p>
     
     <h2> HELLO WORD <h2>
+        
+        <p> gfhgfdfdhgfghdghdhgvjgfhgcjhvhjghjvjhchhjghjjhjhvhjvjhbjhhjvhjvhjvjhvjhhvv <p>
 
 </body>
 
